--- a/templates/user/baneame.html.twig
+++ b/templates/user/baneame.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Banear usuario {{ user.username }}</h1>
+    <h1>¿Banear usuario {{ user.username }}?</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
